Adicionar galeria de imagens no modal de armário

--- a/script.html
+++ b/script.html
@@ -4895,9 +4895,9 @@
                     : '';
                 const dataRegistroFormatada = formatarDataComDiaSemana(armario.dataRegistro);
                 const dataRegistroHtml = `<p><strong>Data:</strong> ${dataRegistroFormatada}</p>`;
-                const botoesEdicao = `
+                const botoesApoio = `
                     <div class="swal-extra-actions">
-                        <button id="btn-editar-dados" class="swal2-confirm swal2-styled swal2-secondary-action" type="button" style="background-color:#1f2937;">Editar dados</button>
+                        <button id="btn-imagens-armario" class="swal2-confirm swal2-styled swal2-secondary-action" type="button" style="background-color:#475569;">Registros em imagens</button>
                         ${armario.tipo === 'visitante' ? '<button id="btn-editar-horario" class="swal2-confirm swal2-styled swal2-secondary-action" type="button" style="background-color:#2c6e8f;">Editar horário/visita</button>' : ''}
                     </div>`;
                 const moverContingenciaHtml = ehContingencia
@@ -4926,7 +4926,7 @@
                             : (armario.horaPrevista ? `<p><strong>Previsão de saída:</strong> ${armario.horaPrevista}</p>` : '')}
                         ${dataRegistroHtml}
                         ${termoHtml}
-                        ${botoesEdicao}
+                        ${botoesApoio}
                         ${moverContingenciaHtml}
                         ${reimpressaoHtml}
                         ${armario.tipo === 'acompanhante' && termoPendente ? `<div style="margin-top:16px;"><button id="btn-aplicar-termo" class="swal2-confirm swal2-styled" style="background-color:#2c6e8f;">Aplicar termo agora</button></div>` : ''}
@@ -4960,14 +4960,13 @@
                                 });
                             }
                         }
-                        const botaoEditarDados = Swal.getHtmlContainer().querySelector('#btn-editar-dados');
-                        if (botaoEditarDados) {
-                            botaoEditarDados.addEventListener('click', async event => {
+                        const botaoImagens = Swal.getHtmlContainer().querySelector('#btn-imagens-armario');
+                        if (botaoImagens) {
+                            botaoImagens.addEventListener('click', async event => {
                                 event.preventDefault();
-                                const finalizar = iniciarLoadingBotao(botaoEditarDados);
+                                const finalizar = iniciarLoadingBotao(botaoImagens);
                                 try {
-                                    Swal.close();
-                                    await abrirEdicaoDadosArmario(armario.id);
+                                    await abrirGaleriaImagensArmario(armario.id);
                                 } finally {
                                     finalizar();
                                 }
@@ -7891,6 +7890,200 @@
                 saida: 'Saída de pertences'
             };
             return mapa[tipo] || tipo;
+        }
+        async function abrirGaleriaImagensArmario(id) {
+            const armario = obterArmarioPorId(id) || estado.armarios.find(item => normalizarIdentificador(item.idPlanilha) === normalizarIdentificador(id));
+            if (!armario) {
+                mostrarErro('Armário não encontrado para carregar as imagens.');
+                return;
+            }
+
+            Swal.fire({
+                title: 'Carregando registros em imagens...',
+                allowOutsideClick: false,
+                showConfirmButton: false,
+                didOpen: () => {
+                    Swal.showLoading();
+                }
+            });
+
+            let imagens = [];
+            try {
+                const parametros = montarPayloadTermo(armario, { incluirFinalizados: true });
+                const [movResposta, termoResposta] = await Promise.all([
+                    callGoogleScript('getMovimentacoes', parametros),
+                    callGoogleScript('getTermo', parametros)
+                ]);
+
+                if (termoResposta && termoResposta.success && termoResposta.data) {
+                    const termo = termoResposta.data;
+                    const volumes = Array.isArray(termo.volumes) ? termo.volumes : [];
+                    const aplicadoEm = termo.aplicadoEm ? formatarDataHora(termo.aplicadoEm) : '-';
+                    volumes.forEach((volume, indice) => {
+                        if (!volume.fotoUrl) return;
+                        imagens.push({
+                            contexto: 'Aplicação do termo',
+                            tipo: 'termo',
+                            titulo: volume.descricao ? `Volume ${indice + 1} - ${volume.descricao}` : `Volume ${indice + 1}`,
+                            dataHora: aplicadoEm,
+                            detalhe: `Quantidade: ${volume.quantidade || '-'}`,
+                            responsavel: termo.acompanhante || termo.paciente || '',
+                            url: volume.fotoUrl
+                        });
+                    });
+                }
+
+                if (movResposta && movResposta.success && Array.isArray(movResposta.data)) {
+                    movResposta.data.forEach(mov => {
+                        if (!mov.fotoUrl) return;
+                        const tipoMov = formatarTituloMovimento(normalizarTexto(mov.tipo));
+                        const itensMov = normalizarListaItensMovimentacao(mov.itens);
+                        const descricaoItens = itensMov.length
+                            ? `Itens: ${itensMov.map(item => `${Number(item.quantidade)}x ${item.descricao}`).join('; ')}`
+                            : '';
+                        const dataHora = mov.data && mov.hora
+                            ? `${mov.data} ${mov.hora}`
+                            : formatarDataHora(mov.dataHoraRegistro || '');
+                        imagens.push({
+                            contexto: tipoMov || 'Movimentação',
+                            tipo: 'movimentacao',
+                            titulo: mov.descricao || 'Registro da movimentação',
+                            dataHora,
+                            detalhe: descricaoItens,
+                            responsavel: mov.responsavel || '',
+                            url: mov.fotoUrl
+                        });
+                    });
+                }
+            } catch (erroGaleria) {
+                console.error('Erro ao carregar registros em imagens:', erroGaleria);
+                mostrarErro('Não foi possível carregar os registros em imagens.');
+                Swal.close();
+                return;
+            }
+
+            Swal.close();
+
+            const estiloGaleria = `
+                <style>
+                    .galeria-imagens-grid {
+                        display: grid;
+                        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+                        gap: 16px;
+                        margin-top: 12px;
+                    }
+                    .galeria-imagem-card {
+                        background: #0f172a;
+                        border: 1px solid #1f2937;
+                        border-radius: 12px;
+                        overflow: hidden;
+                        box-shadow: 0 12px 30px rgba(0, 0, 0, 0.25);
+                        display: flex;
+                        flex-direction: column;
+                    }
+                    .galeria-imagem-thumb {
+                        position: relative;
+                        padding-top: 62%;
+                        background: linear-gradient(135deg, #1e293b, #0f172a);
+                    }
+                    .galeria-imagem-thumb img {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                    .galeria-badge {
+                        position: absolute;
+                        top: 10px;
+                        left: 10px;
+                        background: rgba(15, 118, 110, 0.9);
+                        color: #fff;
+                        padding: 6px 10px;
+                        border-radius: 999px;
+                        font-size: 12px;
+                        font-weight: 600;
+                        display: inline-flex;
+                        align-items: center;
+                        gap: 6px;
+                    }
+                    .galeria-badge i {
+                        font-size: 12px;
+                    }
+                    .galeria-imagem-conteudo {
+                        padding: 14px 16px 16px;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 6px;
+                    }
+                    .galeria-imagem-contexto {
+                        color: #94a3b8;
+                        font-size: 12px;
+                        letter-spacing: 0.01em;
+                        text-transform: uppercase;
+                        font-weight: 700;
+                    }
+                    .galeria-imagem-titulo {
+                        font-size: 16px;
+                        font-weight: 700;
+                        color: #e2e8f0;
+                        margin: 0;
+                    }
+                    .galeria-imagem-detalhe {
+                        font-size: 13px;
+                        color: #cbd5e1;
+                        margin: 0;
+                    }
+                    .galeria-imagem-meta {
+                        display: flex;
+                        flex-wrap: wrap;
+                        gap: 8px;
+                        color: #94a3b8;
+                        font-size: 12px;
+                    }
+                    .galeria-imagem-meta span {
+                        display: inline-flex;
+                        align-items: center;
+                        gap: 6px;
+                        background: #1e293b;
+                        padding: 6px 10px;
+                        border-radius: 10px;
+                    }
+                    .galeria-imagens-vazia {
+                        text-align: center;
+                        padding: 24px;
+                        color: #94a3b8;
+                    }
+                </style>
+            `;
+
+            const conteudoImagens = imagens.length
+                ? `<div class="galeria-imagens-grid">${imagens.map(item => `
+                        <div class="galeria-imagem-card">
+                            <div class="galeria-imagem-thumb">
+                                <img src="${item.url}" alt="${item.titulo}">
+                                <span class="galeria-badge"><i class="fas ${item.tipo === 'termo' ? 'fa-file-signature' : 'fa-box-open'}"></i> ${item.contexto}</span>
+                            </div>
+                            <div class="galeria-imagem-conteudo">
+                                <div class="galeria-imagem-contexto">${item.dataHora || '-'}</div>
+                                <p class="galeria-imagem-titulo">${item.titulo}</p>
+                                ${item.detalhe ? `<p class="galeria-imagem-detalhe">${item.detalhe}</p>` : ''}
+                                <div class="galeria-imagem-meta">
+                                    ${item.responsavel ? `<span><i class="fas fa-user"></i> ${item.responsavel}</span>` : ''}
+                                </div>
+                            </div>
+                        </div>
+                    `).join('')}</div>`
+                : '<div class="galeria-imagens-vazia">Nenhum registro em imagem encontrado para este armário.</div>';
+
+            await Swal.fire({
+                title: `Registros em imagens - Armário ${armario.numero}`,
+                html: `${estiloGaleria}${conteudoImagens}`,
+                width: 960,
+                confirmButtonText: 'Fechar',
+                focusConfirm: false
+            });
         }
         function aplicarMascaraLeito(valor) {
             const texto = (valor || '').toString();
